Created vacation maps with pop-up markers

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1171,6 +1171,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cd924dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "4cc662a7",
    "metadata": {},
@@ -3038,7 +3046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a71cd0a7",
+   "id": "a4b46c15",
    "metadata": {},
    "source": [
     "## Scatter Plots for Latitude vs Weather Parameters\n",
@@ -3200,7 +3208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb6c9b7",
+   "id": "a59992c4",
    "metadata": {},
    "source": [
     "### Latitude vs. Max Temp Scatter Plot"
@@ -3250,7 +3258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ca5c2c",
+   "id": "9b68388f",
    "metadata": {},
    "source": [
     "### Latitude vs. Humidity Scatter Plot"
@@ -3297,7 +3305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67041178",
+   "id": "83bf9765",
    "metadata": {},
    "source": [
     "### Latitude vs. Cloudiness Scatter Plot"
@@ -3344,7 +3352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb0c949",
+   "id": "c3b43859",
    "metadata": {},
    "source": [
     "### Latitude vs. Wind Speed Scatter Plot"
@@ -3353,7 +3361,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ab9ae4a7",
+   "id": "b8b321b0",
    "metadata": {},
    "outputs": [
     {
@@ -3391,7 +3399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd3bb71",
+   "id": "7a60f64b",
    "metadata": {},
    "source": [
     "## Linear Regression Analysis"
@@ -3400,7 +3408,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3f4171b2",
+   "id": "df3707a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3434,7 +3442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c475aff",
+   "id": "509a594f",
    "metadata": {},
    "source": [
     "### Northern and Southern Hemispheres DataFrames"
@@ -3443,7 +3451,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "7ceecb9c",
+   "id": "234894e4",
    "metadata": {},
    "outputs": [
     {
@@ -3476,7 +3484,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "5607c4b8",
+   "id": "60a8151b",
    "metadata": {},
    "outputs": [
     {
@@ -3509,7 +3517,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "f7294782",
+   "id": "d01a6223",
    "metadata": {},
    "outputs": [
     {
@@ -3644,7 +3652,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "2fdc7ffe",
+   "id": "35c4f679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3655,7 +3663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc947763",
+   "id": "ba4f3f7e",
    "metadata": {},
    "source": [
     "### Linear Regression on the Max Temp for the Northern & Southern Hemispheres"
@@ -3664,7 +3672,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "760865a2",
+   "id": "c21d287f",
    "metadata": {},
    "outputs": [
     {
@@ -3703,7 +3711,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "0729b35f",
+   "id": "03288566",
    "metadata": {},
    "outputs": [
     {
@@ -3739,7 +3747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29eba64",
+   "id": "bff35d49",
    "metadata": {},
    "source": [
     "### Linear Regression on the Percent Humidity for the Northern & Southern Hemispheres"
@@ -3748,7 +3756,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "2b141324",
+   "id": "4dbe208c",
    "metadata": {},
    "outputs": [
     {
@@ -3787,7 +3795,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "7323352e",
+   "id": "e66e0c11",
    "metadata": {},
    "outputs": [
     {
@@ -3825,7 +3833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2af0e3",
+   "id": "52a95f75",
    "metadata": {},
    "source": [
     "### Linear Regression on the Percent Cloudiness for the Northern & Southern Hemispheres"
@@ -3834,7 +3842,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "509d19bb",
+   "id": "8fc301ed",
    "metadata": {},
    "outputs": [
     {
@@ -3873,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e94c73db",
+   "id": "4b309586",
    "metadata": {},
    "outputs": [
     {
@@ -3911,7 +3919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ac5e11",
+   "id": "6056c686",
    "metadata": {},
    "source": [
     "### Linear Regression on the Wind Speed for the Northern & Southern Hemispheres"
@@ -3920,7 +3928,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "bbf25ecf",
+   "id": "e7d8964c",
    "metadata": {},
    "outputs": [
     {
@@ -3959,7 +3967,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "fbe561cb",
+   "id": "38fc5a71",
    "metadata": {},
    "outputs": [
     {
@@ -3996,9 +4004,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7fc3ac31",
+   "metadata": {},
+   "source": [
+    "## Heatmaps for Weather Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698904bf",
+   "id": "053c30bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4006,7 +4022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6f7ff8",
+   "id": "984c1cf2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4014,7 +4030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6c96092",
+   "id": "f3619834",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4022,7 +4038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b925d342",
+   "id": "b0677d60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4030,7 +4046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58951416",
+   "id": "ffd490a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4038,7 +4054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13d45d3",
+   "id": "5166139d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4046,7 +4062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c2dbc3",
+   "id": "1461f66b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4054,7 +4070,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a70a8ab",
+   "id": "58a6e2f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27b4eb2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9977cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adeea69e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b98705c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f865e65b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68065649",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5991ef59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3decf8a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb438f61",
    "metadata": {},
    "outputs": [],
    "source": []
